[gd_scene load_steps=9 format=3 uid="uid://qfykl4ysyujh"]

[ext_resource type="Script" path="res://Scenes/task_ui.gd" id="1_21hkd"]
[ext_resource type="PackedScene" uid="uid://8be7nyo7xweg" path="res://Scenes/task_settings_button.tscn" id="2_aaygc"]
[ext_resource type="PackedScene" uid="uid://cyug2qv2yybf8" path="res://Scenes/edit_field.tscn" id="2_lf2mo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nr314"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)
border_width_left = 4
border_width_top = 2
border_width_right = 4
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10
shadow_color = Color(0, 0, 0, 0.235294)
shadow_size = 3
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i64ks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8hrh"]
bg_color = Color(0.92549, 0.92549, 0.92549, 1)
border_color = Color(0.864675, 0.864675, 0.864675, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl580"]
bg_color = Color(0.219608, 0.690196, 0.580392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onspa"]
bg_color = Color(0.92549, 0.92549, 0.92549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="TaskUI" type="Control" groups=["SlotUI"]]
y_sort_enabled = true
custom_minimum_size = Vector2(340, 75)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_right = 270.0
offset_bottom = 75.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_21hkd")

[node name="TaskUIPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(340, 75)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -270.0
offset_right = 270.0
offset_bottom = 75.0
grow_horizontal = 2
pivot_offset = Vector2(270, 37)
theme_override_styles/panel = SubResource("StyleBoxFlat_nr314")

[node name="MarginContainer" type="MarginContainer" parent="TaskUIPanel"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TaskUIPanel/MarginContainer"]
layout_mode = 2

[node name="MarginContainerTitle" type="MarginContainer" parent="TaskUIPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40

[node name="TitleLabel" type="Label" parent="TaskUIPanel/MarginContainer/HBoxContainer/MarginContainerTitle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Some Task"

[node name="MarginContainer" type="MarginContainer" parent="TaskUIPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="TaskUIPanel/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TaskSettingsButton" parent="TaskUIPanel/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_aaygc")]
unique_name_in_owner = true
layout_mode = 2

[node name="CompletedButton" type="Button" parent="TaskUIPanel/MarginContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_i64ks")
theme_override_styles/hover = SubResource("StyleBoxFlat_o8hrh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vl580")
theme_override_styles/normal = SubResource("StyleBoxFlat_onspa")
toggle_mode = true

[node name="TapTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="EditField" parent="." instance=ExtResource("2_lf2mo")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="gui_input" from="TaskUIPanel" to="." method="_on_task_ui_panel_gui_input"]
